# Inspector

./: .gitignore  AITrainer.cpp  AITrainer.h  CMakeLists.txt  CameraSettingsDialog.cpp  CameraSettingsDialog.h  CameraView.cpp  CameraView.h  CameraView_STRIP_helpers.cpp  ClientDialog.cpp  ClientDialog.h  CommonDefs.h  ConfigManager.cpp  ConfigManager.h  CustomFileDialog.cpp  CustomFileDialog.h  CustomMessageBox.cpp  CustomMessageBox.h  Dockerfile.ai  FilterDialog.cpp  FilterDialog.h  FilterPropertyWidget.cpp  FilterPropertyWidget.h  ImageProcessor.cpp  ImageProcessor.h  InsProcessor.cpp  InsProcessor.h  LanguageManager.cpp  LanguageManager.h  LanguageSettingsDialog.cpp  LanguageSettingsDialog.h  LogViewer.cpp  LogViewer.h  README.md  RecipeManager.cpp  RecipeManager.h  SerialCommunication.cpp  SerialCommunication.h  SerialSettingsDialog.cpp  SerialSettingsDialog.h  (+19 more)
deploy/: UserSet1  config.xml  lang.xml  train_padim_anomalib.py  train_patchcore_anomalib.py
docker/: Dockerfile  README.md  convert_patchcore_to_ir.py  docker_run_with_data.sh  requirements.txt  run_train.sh  train_patchcore_anomalib.py
results/Patchcore/I_7Qmst/: latest
results/Patchcore/I_A86kX/: latest
